# education-calculator

./: .env.example  .gitignore  README.md  education.db  pyproject.toml  requirements.txt  start_web.ps1
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  sanitize.py  schemas.py  security_headers.py
app/routes/: balances.py  dashboard.py  loan_balances.py  projections.py  stress_test.py
app/services/: __init__.py  comparison.py  education_withdrawals.py  loans.py  monte_carlo.py  projection.py
app/static/css/: dashboard.css
app/static/js/: chart.js
app/templates/: base.html  dashboard.html
data/: children.json
lib/: __init__.py  calculator.py
tests/: test_app.py  test_withdrawals.py
