[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "education-calculator"
version = "0.1.0"
description = "529 education investment projection calculator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools]
packages = ["app", "lib"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    'ignore:.*asyncio\.iscoroutinefunction.*:DeprecationWarning',
]
